--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     </div>
 
     <div id="instagramForm" class="hidden">
-      <input id="igURL" placeholder="tempel link instagram disini ya..." />
+      <input id="igURL" placeholder="tempel link instagram disini ya..." disabled />
       <button onclick="downloadInstagram()">Download</button>
       <div id="igResult" style="margin-top:20px;"></div>
     </div>
@@ -138,7 +138,7 @@
         document.getElementById("desc").innerHTML = 'download video tiktok tanpa watermark dari <strong>sukistore.me</strong>';
         document.getElementById("tiktokForm").classList.remove("hidden");
       } else {
-        document.getElementById("desc").innerHTML = 'download video instagram yang <strong>jadi post, reels, atau story</strong> dari <strong>sukistore.me</strong>';
+        document.getElementById("desc").innerHTML = 'Fitur Instagram sedang dalam perawatan 😿. Coba lagi nanti ya.';
         document.getElementById("instagramForm").classList.remove("hidden");
       }
       toggleMenu();
@@ -175,22 +175,8 @@
         });
     }
 
-    async function downloadInstagram() {
-      const input = document.getElementById("igURL").value.trim();
-      if (!input) return alert("tempel link instagram dulu!");
-      fetch(`https://instagram-reel-api.onrender.com?url=${encodeURIComponent(input)}`)
-        .then(r => r.json())
-        .then(d => {
-          if (d?.download_link) {
-            document.getElementById("igResult").innerHTML =
-              `<a href="${d.download_link}" target="_blank"><button>Download Now</button></a>`;
-          } else {
-            document.getElementById("igResult").innerText = "video tidak ditemukan!";
-          }
-        })
-        .catch(() => {
-          document.getElementById("igResult").innerText = "gagal mengambil video";
-        });
+    function downloadInstagram() {
+      document.getElementById("igResult").innerText = "Fitur Instagram sedang dalam perawatan 😿. Coba lagi nanti ya.";
     }
   </script>
 
