--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
     }
 
     function downloadInstagram() {
-      document.getElementById("igResult").innerText = "Fitur Instagram sedang dalam perawatan 😿. Coba lagi nanti ya.";
+      document.getElementById("igResult").innerText = "fitur ig/instagram lagi mt/maintance DER";
     }
   </script>
 
