--- a/index.html
+++ b/index.html
@@ -1,30 +1,48 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>sukitik | download tiktok & ig tanpa watermark - sukistore.me</title>
+
+  <!-- blok klik kanan & shortcut devtools -->
   <script>
     document.addEventListener('contextmenu', e => {
       alert('😺 kode disembunyiin, gak bisa disalin ya!');
       e.preventDefault();
     });
-    window.addEventListener("keydown", e => {
+    window.addEventListener('keydown', e => {
       if (
-        e.keyCode === 123 ||
-        (e.ctrlKey && e.shiftKey && e.keyCode === 73) ||
-        (e.ctrlKey && e.keyCode === 85) ||
-        (e.ctrlKey && e.keyCode === 83)
+        e.keyCode === 123 || // f12
+        (e.ctrlKey && e.shiftKey && e.keyCode === 73) || // ctrl+shift+i
+        (e.ctrlKey && e.keyCode === 85) || // ctrl+u
+        (e.ctrlKey && e.keyCode === 83)   // ctrl+s
       ) {
-        alert("😹 kode disembunyiin yaaa hehe");
+        alert('😹 mau ngapain buka source 😹?');
         e.preventDefault();
       }
     });
+
+    // deteksi kalo devtools dibuka
+    (function () {
+      let isOpen = false;
+      const batas = 160;
+      setInterval(() => {
+        const cekLebar = window.outerWidth - window.innerWidth > batas;
+        const cekTinggi = window.outerHeight - window.innerHeight > batas;
+        if ((cekLebar || cekTinggi) && !isOpen) {
+          alert('😹 mau ngapain buka devtools?');
+          isOpen = true;
+        }
+        if (!cekLebar && !cekTinggi) isOpen = false;
+      }, 500);
+    })();
   </script>
+
   <style>
     body {
       margin: 0;
-      font-family: Arial, sans-serif;
+      font-family: arial, sans-serif;
       background: url('planet.png') no-repeat center center fixed;
       background-size: cover;
       color: white;
@@ -97,30 +115,36 @@
       border-radius: 4px;
       cursor: pointer;
     }
-    .hidden { display: none; }
+    .hidden {
+      display: none;
+    }
   </style>
 </head>
 <body>
-  <button class="menu-button" onclick="toggleMenu()">=</button>
+  <!-- tombol menu kanan atas -->
+  <button class="menu-button" onclick="toggleMenu()">—</button>
   <div id="platformMenu" class="platform-menu">
-    <button onclick="switchPlatform('tiktok')">TikTok</button>
-    <button onclick="switchPlatform('instagram')">Instagram</button>
+    <button onclick="switchPlatform('tiktok')">tiktok</button>
+    <button onclick="switchPlatform('instagram')">instagram</button>
   </div>
 
+  <!-- konten utama -->
   <div class="container">
-    <h1>SukiTik <img src="astronot-logo.png" alt="logo" class="logo" /></h1>
-    <div class="credit">By Beva Anjas Ganteng Gurinjayyyyyy 😎🔥</div>
+    <h1>sukitik <img src="astronot-logo.png" alt="logo" class="logo" /></h1>
+    <div class="credit">by beva anjas ganteng gurinjayyyyyy 😎🔥</div>
     <p id="desc">download video tiktok tanpa watermark dari <strong>sukistore.me</strong></p>
 
+    <!-- form tiktok -->
     <div id="tiktokForm">
       <input id="tiktokURL" placeholder="tempel link tiktok disini ya..." />
-      <button onclick="downloadTiktok()">Download</button>
+      <button onclick="downloadTiktok()">download</button>
       <div id="tiktokResult" style="margin-top:20px;"></div>
     </div>
 
+    <!-- form instagram (maintenance) -->
     <div id="instagramForm" class="hidden">
-      <input id="igURL" placeholder="tempel link instagram disini ya..." disabled />
-      <button onclick="downloadInstagram()">Download</button>
+      <input id="igURL" placeholder="fitur instagram lagi perawatan" disabled />
+      <button onclick="downloadInstagram()">download</button>
       <div id="igResult" style="margin-top:20px;"></div>
     </div>
   </div>
@@ -138,49 +162,48 @@
         document.getElementById("desc").innerHTML = 'download video tiktok tanpa watermark dari <strong>sukistore.me</strong>';
         document.getElementById("tiktokForm").classList.remove("hidden");
       } else {
-        document.getElementById("desc").innerHTML = 'Fitur Instagram sedang dalam perawatan 😿. Coba lagi nanti ya.';
+        document.getElementById("desc").innerHTML = 'fitur instagram lagi dalam perawatan 😿';
         document.getElementById("instagramForm").classList.remove("hidden");
       }
       toggleMenu();
     }
-  </script>
 
-  <script>
     async function resolveFinalURL(u) {
       if (u.includes("vt.tiktok.com")) {
         try {
           const r = await fetch(u, { method: 'HEAD', redirect: 'follow' });
           return r.url || u;
-        } catch { return u; }
+        } catch {
+          return u;
+        }
       }
       return u;
     }
 
     async function downloadTiktok() {
       const input = document.getElementById("tiktokURL").value.trim();
-      if (!input) return alert("tempel link tiktok dulu!");
+      if (!input) return alert("tempel link tiktok dulu ya!");
       const finalURL = await resolveFinalURL(input);
       fetch(`https://tikwm.com/api/?url=${encodeURIComponent(finalURL)}`)
         .then(r => r.json())
         .then(d => {
           if (d?.data?.play) {
             document.getElementById("tiktokResult").innerHTML =
-              `<a href="${d.data.play}" target="_blank"><button>Download Now</button></a>`;
+              `<a href="${d.data.play}" target="_blank"><button>download now</button></a>`;
           } else {
-            document.getElementById("tiktokResult").innerText = "video tidak ditemukan!";
+            document.getElementById("tiktokResult").innerText = "video gak ketemu 😢";
           }
         })
         .catch(() => {
-          document.getElementById("tiktokResult").innerText = "gagal mengambil video";
+          document.getElementById("tiktokResult").innerText = "gagal ambil video";
         });
     }
 
     function downloadInstagram() {
-      document.getElementById("igResult").innerText = "fitur ig/instagram lagi mt/maintance DER";
+      document.getElementById("igResult").innerText = "fitur instagram lagi maintance 😿. tunggu update selanjutnya ya!";
     }
-  </script>
 
-  <script>
+    // efek gerak background
     document.addEventListener("mousemove", e => {
       const x = (e.clientX / window.innerWidth - 0.5) * 20;
       const y = (e.clientY / window.innerHeight - 0.5) * 20;
