--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- proteksi: blok klik kanan + shortcut devtools -->
   <script>
     document.addEventListener('contextmenu', e => {
-      alert('😺 kode disembunyiin, gak bisa disalin ya!');
+      alert('😺');
       e.preventDefault();
     });
     window.addEventListener('keydown', e => {
