--- a/index.html
+++ b/index.html
@@ -5,48 +5,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>SukiTik | download tiktok & ig tanpa watermark - sukistore.me</title>
 
-  <!-- efek salju -->
-  <script src="https://cdn.jsdelivr.net/gh/lokesh-coder/pretty-snowflakes/snowflakes.min.js"></script>
-
-  <!-- proteksi: blok klik kanan + shortcut devtools -->
-  <script>
-    document.addEventListener('contextmenu', e => {
-      alert('😺');
-      e.preventDefault();
-    });
-    window.addEventListener('keydown', e => {
-      if (
-        e.keyCode === 123 ||
-        (e.ctrlKey && e.shiftKey && e.keyCode === 73) ||
-        (e.ctrlKey && e.keyCode === 85) ||
-        (e.ctrlKey && e.keyCode === 83)
-      ) {
-        alert('😹 mau ngapain buka source 😹?');
-        e.preventDefault();
-      }
-    });
-    (function () {
-      let isOpen = false;
-      const batas = 160;
-      setInterval(() => {
-        const width = window.outerWidth - window.innerWidth > batas;
-        const height = window.outerHeight - window.innerHeight > batas;
-        if ((width || height) && !isOpen) {
-          alert('😹 mau ngapain buka devtools?');
-          isOpen = true;
-        }
-        if (!width && !height) isOpen = false;
-      }, 500);
-    })();
-  </script>
-
   <style>
+    /* video background style */
+    #bgVideo {
+      position: fixed;
+      top: 0;
+      left: 0;
+      min-width: 100%;
+      min-height: 100%;
+      object-fit: cover;
+      z-index: -1;
+      filter: brightness(0.6);
+    }
+
     body {
       margin: 0;
       font-family: arial, sans-serif;
-      background: url('https://images.unsplash.com/photo-1549887534-5787c51f498d?auto=format&fit=crop&w=1600&q=80') no-repeat center center fixed;
-      background-size: cover;
-      color: white;
+      color: #111;
       overflow: hidden;
     }
 
@@ -70,14 +45,15 @@
       border: none;
       border-radius: 10px;
       backdrop-filter: blur(10px);
-      background: rgba(255, 255, 255, 0.1);
-      color: #fff;
+      background: rgba(255, 255, 255, 0.5);
+      color: #111;
       margin: 10px 0;
       transition: all 0.2s ease;
+      box-shadow: 0 0 8px rgba(0,0,0,0.2);
     }
 
     input::placeholder {
-      color: #ddd;
+      color: #555;
     }
 
     input {
@@ -85,13 +61,13 @@
     }
 
     button:hover {
-      background: rgba(255, 255, 255, 0.2);
+      background: rgba(255, 255, 255, 0.7);
     }
 
     .credit {
       font-size: 14px;
       margin-top: 6px;
-      color: #ccc;
+      color: #333;
     }
 
     .menu-button {
@@ -102,6 +78,9 @@
       padding: 5px 12px;
       border-radius: 10px;
       z-index: 10;
+      background: rgba(255,255,255,0.5);
+      color: #111;
+      backdrop-filter: blur(10px);
     }
 
     .platform-menu {
@@ -109,18 +88,19 @@
       position: fixed;
       top: 50px;
       right: 10px;
-      background: rgba(0,0,0,0.5);
+      background: rgba(255,255,255,0.5);
       padding: 10px;
       border-radius: 10px;
       z-index: 10;
+      backdrop-filter: blur(10px);
     }
 
     .platform-menu button {
       display: block;
       width: 100%;
       margin: 5px 0;
-      background: rgba(255, 255, 255, 0.1);
-      color: white;
+      background: rgba(255, 255, 255, 0.8);
+      color: #111;
       padding: 8px;
       border-radius: 6px;
       cursor: pointer;
@@ -132,12 +112,20 @@
   </style>
 </head>
 <body>
+
+  <!-- Background Video -->
+  <video autoplay muted loop id="bgVideo">
+    <source src="https://cdn.pixabay.com/vimeo/282314952/rain-18371.mp4?width=640&hash=f7348a04eae46ec5f4f85cb3913cc9b85fbd51df" type="video/mp4">
+  </video>
+
+  <!-- Tombol Menu -->
   <button class="menu-button" onclick="toggleMenu()">=</button>
   <div id="platformMenu" class="platform-menu">
     <button onclick="switchPlatform('tiktok')">TikTok</button>
     <button onclick="switchPlatform('instagram')">Instagram</button>
   </div>
 
+  <!-- Konten Utama -->
   <div class="container">
     <h1>SukiTik <img src="astronot-logo.png" alt="logo" class="logo" /></h1>
     <div class="credit">By Beva Anjas Ganteng Gurinjayyyyyy 😎🔥</div>
