--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     body {
       margin: 0;
       font-family: arial, sans-serif;
-      background: url('https://ibb.co/s8L8HwX') no-repeat center center fixed;
+      background: url('https://files.catbox.moe/y4kzjx.png') no-repeat center center fixed;
       background-size: cover;
       color: #111;
       overflow: hidden;
