--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
   </div>
 
   <div class="container">
-    <h1>SukiTik <img src="astronot-logo.png" alt="logo" class="logo" /></h1>
+    <h1 style="color:white">SukiTik <img src="astronot-logo.png" alt="logo" class="logo" /></h1>
     <div class="credit">By Beva Anjas Ganteng Gurinjayyyyyy 😎🔥</div>
     <p id="desc">download video tiktok tanpa watermark dari <strong>sukistore.me</strong></p>
 
