--- a/index.html
+++ b/index.html
@@ -1,220 +1,204 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>SukiTik | download tiktok & ig tanpa watermark - sukistore.me</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: arial, sans-serif;
-      background: url('https://files.catbox.moe/y4kzjx.png') no-repeat center center fixed;
-      background-size: cover;
-      color: white;
-      overflow-x: hidden;
-    }
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>SukiTik | download tiktok & ig tanpa watermark - sukistore.me</title>
 
-    .container {
-      text-align: center;
-      margin-top: 10vh;
-      position: relative;
-      z-index: 1;
-      animation: fadeIn 1s ease;
-    }
+  <style>
+    body {
+      margin: 0;
+      font-family: arial, sans-serif;
+      background: url('https://files.catbox.moe/y4kzjx.png') no-repeat center center fixed;
+      background-size: cover;
+      color: white;
+      overflow: hidden;
+    }
 
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(-20px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
+    .container {
+      text-align: center;
+      margin-top: 10vh;
+      position: relative;
+      z-index: 1;
+      animation: fadeIn 1s ease;
+    }
 
-    .logo {
-      width: 24px;
-      height: 24px;
-      vertical-align: middle;
-      margin-left: 8px;
-    }
+    @keyframes fadeIn {
+      from { opacity: 0; }
+      to { opacity: 1; }
+    }
 
-    input, button {
-      font-size: 16px;
-      padding: 10px;
-      border: none;
-      border-radius: 10px;
-      backdrop-filter: blur(10px);
-      background: rgba(255, 255, 255, 0.1);
-      color: white;
-      margin: 10px 0;
-      transition: all 0.2s ease;
-      box-shadow: 0 0 8px rgba(0,0,0,0.2);
-    }
+    .logo {
+      width: 24px;
+      height: 24px;
+      vertical-align: middle;
+      margin-left: 8px;
+    }
 
-    input::placeholder {
-      color: #eee;
-    }
+    input, button {
+      font-size: 16px;
+      padding: 10px;
+      border: none;
+      border-radius: 10px;
+      backdrop-filter: blur(10px);
+      background: rgba(255, 255, 255, 0.1);
+      color: white;
+      margin: 10px 0;
+      transition: all 0.2s ease;
+      box-shadow: 0 0 8px rgba(0,0,0,0.2);
+    }
 
-    input {
-      width: 80%;
-    }
+    input::placeholder {
+      color: #eee;
+    }
 
-    button:hover {
-      background: rgba(255, 255, 255, 0.2);
-    }
+    input {
+      width: 80%;
+    }
 
-    .credit {
-      font-size: 14px;
-      margin-top: 6px;
-      color: white;
-    }
+    button:hover {
+      background: rgba(255, 255, 255, 0.2);
+    }
 
-    .menu-button {
-      position: fixed;
-      top: 10px;
-      right: 10px;
-      font-size: 20px;
-      padding: 5px 12px;
-      border-radius: 10px;
-      z-index: 10;
-      background: rgba(255,255,255,0.1);
-      color: white;
-      backdrop-filter: blur(10px);
-    }
+    .credit {
+      font-size: 14px;
+      margin-top: 6px;
+      color: white;
+    }
 
-    .platform-menu {
-      display: none;
-      position: fixed;
-      top: 50px;
-      right: 10px;
-      background: rgba(255,255,255,0.1);
-      padding: 10px;
-      border-radius: 10px;
-      z-index: 10;
-      backdrop-filter: blur(10px);
-    }
+    .menu-button {
+      position: fixed;
+      top: 10px;
+      right: 10px;
+      font-size: 20px;
+      padding: 5px 12px;
+      border-radius: 10px;
+      z-index: 10;
+      background: rgba(255,255,255,0.1);
+      color: white;
+      backdrop-filter: blur(10px);
+    }
 
-    .platform-menu button {
-      display: block;
-      width: 100%;
-      margin: 5px 0;
-      background: rgba(255, 255, 255, 0.1);
-      color: white;
-      padding: 8px;
-      border-radius: 6px;
-      cursor: pointer;
-    }
+    .platform-menu {
+      display: none;
+      position: fixed;
+      top: 50px;
+      right: 10px;
+      background: rgba(255,255,255,0.1);
+      padding: 10px;
+      border-radius: 10px;
+      z-index: 10;
+      backdrop-filter: blur(10px);
+    }
 
-    .hidden {
-      display: none;
-    }
+    .platform-menu button {
+      display: block;
+      width: 100%;
+      margin: 5px 0;
+      background: rgba(255, 255, 255, 0.1);
+      color: white;
+      padding: 8px;
+      border-radius: 6px;
+      cursor: pointer;
+    }
 
-    .preview-box {
-      background: rgba(255, 255, 255, 0.1);
-      padding: 10px;
-      border-radius: 12px;
-      margin-top: 20px;
-      backdrop-filter: blur(12px);
-      box-shadow: 0 0 12px rgba(0,0,0,0.2);
-    }
-
-    .preview-img {
-      max-width: 100px;
-      border-radius: 8px;
-      margin: 5px;
-    }
-
-    .preview-title {
-      font-size: 14px;
-      margin: 5px 0;
-      color: white;
-    }
-  </style>
+    .hidden {
+      display: none;
+    }
+  </style>
 </head>
 <body>
-  <button class="menu-button" onclick="toggleMenu()">=</button>
-  <div id="platformMenu" class="platform-menu">
-    <button onclick="switchPlatform('tiktok')">TikTok</button>
-    <button onclick="switchPlatform('instagram')">Instagram</button>
-  </div>
 
-  <div class="container">
-    <h1>SukiTik <img src="astronot-logo.png" alt="logo" class="logo" /></h1>
-    <div class="credit">By Beva Anjas Ganteng Gurinjayyyyyy 😎🔥</div>
-    <p id="desc">download video tiktok tanpa watermark dari <strong>sukistore.me</strong></p>
+  <button class="menu-button" onclick="toggleMenu()">=</button>
+  <div id="platformMenu" class="platform-menu">
+    <button onclick="switchPlatform('tiktok')">TikTok</button>
+    <button onclick="switchPlatform('instagram')">Instagram</button>
+  </div>
 
-    <!-- TikTok Form -->
-    <div id="tiktokForm">
-      <input id="tiktokURL" placeholder="tempel link tiktok disini ya..." />
-      <button onclick="downloadTiktok()">download</button>
-      <div id="tiktokResult" style="margin-top:20px;"></div>
-    </div>
+  <div class="container">
+    <h1>SukiTik <img src="astronot-logo.png" alt="logo" class="logo" /></h1>
+    <div class="credit">By Beva Anjas Ganteng Gurinjayyyyyy 😎🔥</div>
+    <p id="desc">download video tiktok tanpa watermark dari <strong>sukistore.me</strong></p>
 
-    <!-- Instagram Form -->
-    <div id="instagramForm" class="hidden">
-      <input id="igURL" placeholder="fitur instagram lagi perawatan" disabled />
-      <button onclick="downloadInstagram()">download</button>
-      <div id="igResult" style="margin-top:20px;"></div>
-    </div>
-  </div>
+    <!-- TikTok Form -->
+    <div id="tiktokForm">
+      <input id="tiktokURL" placeholder="tempel link tiktok disini ya..." />
+      <button onclick="downloadTiktok()">download</button>
+      <div id="tiktokResult" style="margin-top:20px;"></div>
+    </div>
 
-  <script>
-    function toggleMenu() {
-      const m = document.getElementById("platformMenu");
-      m.style.display = m.style.display === "block" ? "none" : "block";
-    }
+    <!-- Instagram Form -->
+    <div id="instagramForm" class="hidden">
+      <input id="igURL" placeholder="fitur instagram lagi perawatan" disabled />
+      <button onclick="downloadInstagram()">download</button>
+      <div id="igResult" style="margin-top:20px;"></div>
+    </div>
+  </div>
 
-    function switchPlatform(p) {
-      document.getElementById("tiktokForm").classList.add("hidden");
-      document.getElementById("instagramForm").classList.add("hidden");
-      if (p === "tiktok") {
-        document.getElementById("desc").innerHTML = 'download video tiktok tanpa watermark dari <strong>sukistore.me</strong>';
-        document.getElementById("tiktokForm").classList.remove("hidden");
-      } else {
-        document.getElementById("desc").innerHTML = 'fitur instagram lagi dalam perawatan 😿';
-        document.getElementById("instagramForm").classList.remove("hidden");
-      }
-      toggleMenu();
-    }
+  <script>
+    function toggleMenu() {
+      const m = document.getElementById("platformMenu");
+      m.style.display = m.style.display === "block" ? "none" : "block";
+    }
 
-    async function resolveFinalURL(u) {
-      if (u.includes("vt.tiktok.com")) {
-        try {
-          const r = await fetch(u, { method: 'HEAD', redirect: 'follow' });
-          return r.url || u;
-        } catch {
-          return u;
-        }
-      }
-      return u;
-    }
+    function switchPlatform(p) {
+      document.getElementById("tiktokForm").classList.add("hidden");
+      document.getElementById("instagramForm").classList.add("hidden");
+      if (p === "tiktok") {
+        document.getElementById("desc").innerHTML = 'download video tiktok tanpa watermark dari <strong>sukistore.me</strong>';
+        document.getElementById("tiktokForm").classList.remove("hidden");
+      } else {
+        document.getElementById("desc").innerHTML = 'fitur instagram lagi dalam perawatan 😿';
+        document.getElementById("instagramForm").classList.remove("hidden");
+      }
+      toggleMenu();
+    }
 
-    async function downloadTiktok() {
-      const input = document.getElementById("tiktokURL").value.trim();
-      if (!input) return alert("tempel link tiktok dulu ya!");
-      const finalURL = await resolveFinalURL(input);
+    async function resolveFinalURL(u) {
+      if (u.includes("vt.tiktok.com")) {
+        try {
+          const r = await fetch(u, { method: 'HEAD', redirect: 'follow' });
+          return r.url || u;
+        } catch {
+          return u;
+        }
+      }
+      return u;
+    }
 
-      fetch(`https://tikwm.com/api/?url=${encodeURIComponent(finalURL)}`)
-        .then(r => r.json())
-        .then(d => {
-          if (d?.data?.images?.length > 0) {
-            // Handle TikTok Slide Photo
-            const resultBox = document.getElementById("tiktokResult");
-            resultBox.innerHTML = `<div class='preview-box'>${d.data.images.map(img => `<img src='${img}' class='preview-img' />`).join('')}<br><button onclick="alert('klik kanan > simpan gambar untuk download 🙃')">download manual</button></div>`;
+    async function downloadTiktok() {
+      const input = document.getElementById("tiktokURL").value.trim();
+      if (!input) return alert("tempel link tiktok dulu ya!");
+      const finalURL = await resolveFinalURL(input);
 
-          } else if (d?.data?.play) {
-            // Handle TikTok Video
-            const videoUrl = d.data.play;
-            const resultBox = document.getElementById("tiktokResult");
-            resultBox.innerHTML = `<div class='preview-box'><div class='preview-title'>video siap didownload 😎</div><a href='${videoUrl}' download><button>download video</button></a></div>`;
-          } else {
-            document.getElementById("tiktokResult").innerText = "video gak ketemu 😢";
-          }
-        })
-        .catch(() => {
-          document.getElementById("tiktokResult").innerText = "gagal ambil video";
-        });
-    }
+      fetch(`https://tikwm.com/api/?url=${encodeURIComponent(finalURL)}`)
+        .then(r => r.json())
+        .then(d => {
+          if (d?.data?.images && d.data.images.length > 0) {
+            const imageList = d.data.images.map(src => `<img src="${src}" style="max-width:100px; margin:5px; border-radius:10px" />`).join("");
+            document.getElementById("tiktokResult").innerHTML =
+              `<div style="background: rgba(255,255,255,0.05); padding:20px; border-radius:15px; backdrop-filter: blur(10px);">
+                <div>${imageList}</div>
+                <div style="margin-top:10px; color:#ccc;">KLIK KANAN / TEKAN FOTO UNTUK DOWNLOAD</div>
+              </div>`;
+          } else if (d?.data?.play) {
+            const videoUrl = d.data.play;
+            document.getElementById("tiktokResult").innerHTML =
+              `<video controls style="width:80%; border-radius:15px; box-shadow:0 0 10px rgba(0,0,0,0.5);">
+                <source src="${videoUrl}" type="video/mp4" />
+              </video>`;
+          } else {
+            document.getElementById("tiktokResult").innerText = "video gak ketemu 😢";
+          }
+        })
+        .catch(() => {
+          document.getElementById("tiktokResult").innerText = "gagal ambil video";
+        });
+    }
 
-    function downloadInstagram() {
-      document.getElementById("igResult").innerText = "fitur instagram lagi maintance 😿. tunggu update selanjutnya ya!";
-    }
-  </script>
+    function downloadInstagram() {
+      document.getElementById("igResult").innerText = "fitur instagram lagi maintance 😿. tunggu update selanjutnya ya!";
+    }
+  </script>
 </body>
 </html>
